fix: navbar on mobile and networks

--- a/src/components/CustomConnectWalletButton/CustomConnectWalletButton.module.scss
+++ b/src/components/CustomConnectWalletButton/CustomConnectWalletButton.module.scss
@@ -12,7 +12,6 @@
     align-items: center;
     justify-content: center;
     transition: 0.3s all ease-in-out;
-    display: none;
 
     &:hover {
         background-color: #6c5ce7;
@@ -38,6 +37,5 @@
 
     @include lg {
         min-width: 12rem;
-        display: flex;
     }
 }
